<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activities.EditProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/nameView_Edit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageField_Edit"
        android:layout_below="@+id/nameView_Edit"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameField_Edit"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/imageField_Edit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/name" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailField_Edit"
        android:layout_below="@+id/nameField_Edit"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/phoneField_Edit"
        android:layout_below="@+id/emailField_Edit"
        android:layout_centerHorizontal="true"
        android:inputType="phone"
        android:hint="@string/phone_number" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordField_edit"
        android:layout_below="@+id/phoneField_Edit"
        android:layout_centerHorizontal="true"
        android:hint="@string/password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/passwordField_edit">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/updateButton_Edit"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancelButton_Edit"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
